[metadata]
name = control-laser-tower
version = 0.1.2
description = Laser tower controller package for two servos and a laser
long_description = file: README.md
long_description_content_type = text/markdown
author = Robzzz
license = MIT

[options]
packages = find:
install_requires =
    gpiozero
python_requires = >=3.8

[options.packages.find]
where = .
